# drzewa

./: .gitignore  README.md  manage.py  pyproject.toml  script.py
drzewa/: asgi.py  settings.py  urls.py  wsgi.py
drzewa_query/: apps.py  logic.py  urls.py  views.py
drzewa_query/templates/drzewa/: index.html
query/: logic.py  urls.py  views.py
static/: index.html  map.js
